<?xml version="1.0"?>
<package format="2">
  <name>franka_track_ik</name>
  <version>0.0.0</version>
  <description> This package contains the source code for testing and comparing trac_ik</description>
  <author>Patrick Beeson</author>
  <maintainer email="pbeeson@traclabs.com">Patrick Beeson</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>orocos_kdl</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>trac_ik_lib</exec_depend>
  <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
